# cuda-demo

elementwise/: README.md  elementwise.cu  elementwise.h
elementwise/cmake/: CMakeLists.txt  README.md  main.cpp
elementwise/pytorch/: README.md  elementwise.py  lib.cpp
